List of user-visible changes of C Ratfor.

New in XXX
-----------
 * Blackbox and graybox tests have been extended and improved, especially
   w.r.t. ratfor comments, `%' verbatim escaping and `include' and
   `define' builtins.
 * Macros defined with the `define(NAME, BODY)' construct now preserve
   spacing and comments in BODY when the definition is read.  This way,
   if the `-C' ratfor switch is used, comments in BODY are not outputted
   at the point the `define' is scanned, but rather when NAME is expanded.
   This new behaviour seems much more sensible and intuitive than the
   previous one.

New in 1.0q
-----------
 * C Ratfor is not released anymore as public domain software, but is
   covered by GNU General Public License, version 3 or later.

New in 1.0p
-----------
 * The testsuite has been improved and strenghtened.  Especially notable
   is the fact that now different testcases in a same test script are
   (mostly) decoupled.  In particular, a test script does not stop at the
   first failed testcase, but run all the testcase and repoort all those
   which failed.
 * Now a ChangeLog file is distributed, being automatically generated
   from Git commit messages.

New in 1.0o
-----------
 * Improved detection of, and error messages for, invalid case/default.
   In particular, now case/default keywords can be used used only in the
   block after a `switch' statement, and not also within blocks nested
   within that block.
 * Testsuite has been extended and improved, espacially to provide better
   coverage, better feedback, and an increased portability.

New in 1.0n
-----------
 * The name of the package has been changed to "C Ratfor" (previously was
   "Public Domain Ratfor").  Also, the name of the installed ratfor binary
   is now `c-ratfor', rather than simply `ratfor'.
 * The handling of the return statement has been improved and strenghened,
   especially with reference to error messages.  For example, a return