@@ -2,6 +2,10 @@ List of user-visible changes of C Ratfor.
 
 New in XXX
 -----------
+ * Macro definitions with either `define NAME VAL' or `define(NAME,VAL)'
+   is now recognized only at the beginning of a ratfor statement (e.g.
+   after a newline or a semicolon).  This is a consciuos design choice,
+   not a limitation or an implementation detail.
  * Blackbox and graybox tests have been extended and improved, especially
    w.r.t. ratfor comments, `%' verbatim escaping and `include' and
    `define' builtins.
